--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <nav class="nav">
         <ul class="nav__links">
           <li class="nav__item">
-            <a class="nav__link" href="#section--1">Accueil</a>
+            <a class="nav__link" href="#">Accueil</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#section--2">Qui sommes-nous?</a>
